--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -8,10 +8,10 @@
     <div class="banner-container-textContainer">
       <h1>Dinastía iPhone</h1>
       <p>El Apple que esperabas está acá</p>
-      <div class="buttons">
+      <!-- <div class="buttons">
         <button class="btn-light">Button</button>
         <button class="btn-dark">Button</button>
-      </div>
+      </div> -->
     </div>
 
     <div class="banner-container-carrouselContainer">
