--- a/src/app/falsoHome/home.component.html
+++ b/src/app/falsoHome/home.component.html
@@ -6,8 +6,9 @@
 <app-info-pay></app-info-pay>
 <app-whatsapp></app-whatsapp>
 <app-theme-toggle></app-theme-toggle>
-<!-- <app-banner-products></app-banner-products> -->
-<!-- <app-all-products></app-all-products>  -->
-<!-- <app-product-page></app-product-page> -->
-<!-- <app-product-gallery></app-product-gallery>  -->
+<app-faq></app-faq>
+<!-- <app-banner-products></app-banner-products>
+<app-all-products></app-all-products> 
+<app-product-page></app-product-page>
+<app-product-gallery></app-product-gallery>  -->
 <app-footer></app-footer>
